--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,39 @@
 .image-side { /* Should preferably not stretch the width of the image and match the aspect ratio of the divs width. */
     display: flex;
     height: 100vh;
-    /* width: calc(100vh * (1862/2792)); */
-    width: 28vw;
+    width: calc(100vh * (1862/2792));
     border: 2px solid red;
     background-image: url(./assets/fern-img.jpg);
     background-color: green;
     background-size: cover;
+    position: relative;
+    /* z-index: -1; */
+}
+
+.image-side p {
+    /* position: absolute; */
+    color: white;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+}
+
+.logo-banner {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 20vh; /* Maybe make this relative to the aspect ratio of the odin proj logo */
+    background-color: rgb(0 0 0 / .8);
+    position: absolute;
+    top: 30%;
+}
+
+.logo-banner h2 {
+    display: flex; 
+    color: white;
+    align-items: center;
+    font-size: 10cqh;
 }
 
 .signup-side {
@@ -26,9 +53,7 @@
     border: 2px solid black;
 }
 
-/* .image-side img {
-    width: 100%;
-} */
+
 
 .form-col {
     display: flex;
