Completed focus behaviour on text inputs. Outline is removed on focus

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
-/* Make the max width of the div containing the image to be the max width of the image itself. */
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Anuphan";
 }
 
 .main-container {
@@ -53,10 +52,18 @@
     border: 2px solid black;
 }
 
-.form-panel {
+.signup-side > form {
     box-shadow: 0 10px 5px gray;
-    display: flex;
     border: 2px solid black;
+}
+
+.signup-side > form > h2 {
+    margin-left: 10px;
+    font-weight: 200;
+}
+
+.form-panel {
+    display: flex;
 }
 
 .form-col {
@@ -68,6 +75,21 @@
     margin: 5px 10px 5px 10px;
     display: flex; 
     flex-direction: column;
-    border: 1px solid blue;
 }
 
+
+.form-group > input[type="text"] {
+    border: 1px solid #E5E7EB;
+    border-radius: 3px;
+}
+
+
+.form-group > input[type="text"]:focus {
+    border: 1px solid rgb(48, 84, 161);
+    outline: none;
+}
+
+/* .form-group > input[type="text"]:focus-visible {
+    border: 1px solid rgb(48, 84, 161);
+    outline: none;
+} */
